# vscode_containers

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cookiecutter/mamba/: README.md  cookiecutter.json
cookiecutter/mamba/{{cookiecutter.devcontainer_dirname}}/: Dockerfile  devcontainer.json
cookiecutter/standard/: README.md
cookiecutter/standard/{{cookiecutter.devcontainer_dirname}}/: devcontainer.json
test_app/: pyproject.toml
