[project]
name = ""
version = ""
description = ""
authors = [
    {name = "redjax", email = "jackenyon@gmail.com"},
]
dependencies = [
    "red-utils>=0.2.4",
    "sqlalchemy>=2.0.21",
    "polars>=0.19.3",
    "pandas>=2.1.1",
    "jupyter>=1.0.0",
    "msgspec>=0.18.2",
    "attrs>=23.1.0",
    "stackprinter>=0.2.10",
    "dynaconf>=3.2.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

